examples/test/testpolicy1620.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1620
  namespace: namespace184
spec:
  podSelector:
    matchLabels:
      key1: value27
      key23: value24
      key38: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value23
          key16: value49
      podSelector:
        matchLabels:
          key27: value10
          key1: value40
